--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://thomas:yXPp7uvOtQ5mFmJK@cluster0.fukh6wn.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=Cluster0
+spring.data.mongodb.database=${env.MONGO_DATABASE}
+spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${env.MONGO_CLUSTER}
